bug 133 fix, white box alignment, title centering

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,10 @@ a, a:visited {
 
 /* About page style */
 .aboutEarthly, .disclaimer {
-  padding: 1% 10%;
+  margin: 1% 10%;
   margin-bottom: 2%;
   text-align: center;
+  padding-bottom: 0;
 }
 
 .fernanda {
@@ -122,7 +123,7 @@ a, a:visited {
   }
 
   .aboutEarthly, .disclaimer {
-    padding: 1% 25%;
+    margin: 1% 25%;
   }
 }
 
@@ -136,12 +137,8 @@ a, a:visited {
     font-size: 12px !important;
   }
 
-  .order span, .entity-info {
-    font-size: 13px !important;
-  }
-
-  .entity-name h1 {
-    font-size: 21px !important;
+  .order span {
+    font-size: 13px;
   }
 }
 
